--- a/src/main/resources/db/persistence-mysql.properties
+++ b/src/main/resources/db/persistence-mysql.properties
@@ -5,7 +5,7 @@ jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/real_world?useSSL=false
 jdbc.user=root
 jdbc.password=root
-#
+
 # Connection pool properties
 #
 connection.pool.initialPoolSize=5
@@ -15,8 +15,14 @@ connection.pool.maxIdleTime=3000
 #
 # Hibernate properties
 #
-#hibernate.dialect=org.hibernate.dialect.MySQLDialect
-hibernate.dialect=org.hibernate.dialect.H2Dialect
+hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#hibernate.dialect=org.hibernate.dialect.H2Dialect
 hibernate.show_sql=true
 hibernate.packagesToScan=io.spring.entity
-hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=update
+
+
+jwt.secret=yiw1z2XJKQ7VHI...
+jwt.issuer=elghareb
+jwt.type=JWT
+jwt.audience=Realworld
