add security config for authentication and authorization

--- a/src/main/resources/db/persistence-mysql.properties
+++ b/src/main/resources/db/persistence-mysql.properties
@@ -6,6 +6,7 @@ jdbc.url=jdbc:mysql://localhost:3306/real_world?useSSL=false
 jdbc.user=root
 jdbc.password=root
 
+#
 # Connection pool properties
 #
 connection.pool.initialPoolSize=5
@@ -20,3 +21,11 @@ hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql=true
 hibernate.packagesToScan=io.spring.entity
 hibernate.hbm2ddl.auto=update
+#
+# Spring Security properties
+#
+jwt.signing.key.secret=mySecret
+jwt.http.request.header=Authorization
+jwt.get.token.uri=/authenticate
+jwt.refresh.token.uri=/refresh
+jwt.token.expiration.in.days=1
